              WebKit GIO bindings with the new WebKit objects astroid will freeze.

* Show parts in IFRAME
* Toggle between parts without re-opening
* Configure default part
* Show HTML parts if no other part (configurable)
* Do not allow images in encrypted messages (#499)
* Show CID (attached) images in HTML parts (on C-i)
* Zoom messages with C-+ and C--

== v0.12
* `mail.close_on_success` configures if page closes on successful send.
* `terminal.font_description` configures font of embedded terminal.
* `terminal.height` configures height of embedded terminal.
* `mail.format_flowed` is off by default.
* Make hooks undoable by providing a field for the inverse command.
* Do not force throw-keyid (follow gpg config).
* Allow GPG to be disabled with configuration option.

== v0.11.1 / 2018-02-20

* Automatically detect GMime version to build against.

== v0.11.0 / 2018-02-04

* Move to the CMake build system. Meson is deprecated.
* Allow HTML parts to be composed using Markdown.
* Use color to indicate whether a message is marked in thread-index.
* Always throw key-id when sending (using GMime 3)
* Bunch of minor stuff

== v0.10.2 / 2017-10-11

* Fix build issues on Mac OS.
* Gmime 2 used weird timezone for sent email.
* Add Meson build system as alternative.

== v0.10.1 / 2017-09-24

* Fix compilation errors against older versions of notmuch and gmime.

== v0.10 / 2017-09-21

* Support GMime 3 with backwards compatability with GMime 2. This orients us
  towards GMime 3, and support for GMime 2 will be dropped in the future.

* Attach messages by mids with 'A' in new emails.

* Colorful tags in tag editor and in searching

* Tags in the tag editor is now separated by spaces (comma still works)

* New configuration option 'signature_separate' determines if inline
  signatures will be separated from the message by a line containing '-- '.

* Configurable query associated with account can be used to select account as
  From: when replying or forwarding e-mail.
